--- a/Job2.html
+++ b/Job2.html
@@ -13,8 +13,8 @@
         <header>
             <h1>网页标题</h1>
             <ul>
-                <li>首页</li>
-                <li>帮助</li>
+              <li><a href="https://www.bilibili.com/">首页</a></li>
+              <li><a href="https://www.baidu.com">帮助</a></li>
             </ul>
         </header>
         <section>
